# document-intelligence-refinery

./: .gitignore  DOMAIN_NOTES.md  README.md  debug_pageindex.py  debug_pipeline.py  debug_sqlite.py  pyproject.toml
.refinery/: extraction_ledger.jsonl  facts.db
.refinery/pageindex/: company_profile.json  company_profile_demo.json
.refinery/profiles/: company_profile.json  company_profile_demo.json  example_financial_report.json  example_scanned_audit.json  example_tax_report.json  example_technical_report.json
.refinery/vectorstore/: company_profile.jsonl  company_profile_demo.jsonl
reports/: final_report.md  interim_report.md
rubric/: extraction_rules.yaml
src/: __init__.py  main.py
src/agents/: __init__.py  audit_agent.py  chunker.py  extractor.py  indexer.py  langgraph_query_agent.py  query_agent.py  triage.py
src/data/: __init__.py  fact_table.py  vector_store.py
src/models/: __init__.py  document_profile.py  extracted_document.py  ldu.py  pageindex.py  provenance.py
src/strategies/: __init__.py  base.py  fast_text_extractor.py  layout_extractor.py  vision_extractor.py
src/utils/: __init__.py  errors.py  logging.py
tests/: test_chunker_rules.py  test_data_layer_and_audit.py  test_fast_text_extractor.py  test_indexer_and_query_routing.py  test_triage.py
